{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 20,
  "lineage": "0a4614f7-aad7-d912-cae4-4e392434df2b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c96d787043842fb",
            "domain": "vpc",
            "id": "eipalloc-03c96d787043842fb",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-39-100-230.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.100.230",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08afe2dce688cea58",
            "domain": "vpc",
            "id": "eipalloc-08afe2dce688cea58",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-52-78-183-71.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.183.71",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684231376422:internet-gateway/igw-0047f91986207ce21",
            "id": "igw-0047f91986207ce21",
            "owner_id": "684231376422",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-05e904202067b9cff"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c96d787043842fb",
            "connectivity_type": "public",
            "id": "nat-0e53e48d60093eab8",
            "network_interface_id": "eni-01eadea4d6d2b4930",
            "private_ip": "10.0.0.68",
            "public_ip": "3.39.100.230",
            "subnet_id": "subnet-0eb44a6152a439057",
            "tags": {
              "Name": "NAT-GW-1"
            },
            "tags_all": {
              "Name": "NAT-GW-1"
            }
          },
          "dependencies": [
            "aws_eip.nat_1",
            "aws_subnet.first_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08afe2dce688cea58",
            "connectivity_type": "public",
            "id": "nat-06d01e98a08e37648",
            "network_interface_id": "eni-0ed7dc85b90935256",
            "private_ip": "10.0.1.121",
            "public_ip": "52.78.183.71",
            "subnet_id": "subnet-05703193f40159e07",
            "tags": {
              "Name": "NAT-GW-2"
            },
            "tags_all": {
              "Name": "NAT-GW-2"
            }
          },
          "dependencies": [
            "aws_eip.nat_2",
            "aws_subnet.second_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09dbc53ddf8bc5fab1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e53e48d60093eab8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09dbc53ddf8bc5fab",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_1",
            "aws_nat_gateway.nat_gateway_1",
            "aws_route_table.route_table_private_1",
            "aws_subnet.first_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d1a55b5ceaf158681080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06d01e98a08e37648",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d1a55b5ceaf15868",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_2",
            "aws_nat_gateway.nat_gateway_2",
            "aws_route_table.route_table_private_2",
            "aws_subnet.second_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684231376422:route-table/rtb-0fbede611965aac31",
            "id": "rtb-0fbede611965aac31",
            "owner_id": "684231376422",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e904202067b9cff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684231376422:route-table/rtb-09dbc53ddf8bc5fab",
            "id": "rtb-09dbc53ddf8bc5fab",
            "owner_id": "684231376422",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main-private-1"
            },
            "tags_all": {
              "Name": "main-private-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e904202067b9cff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684231376422:route-table/rtb-0d1a55b5ceaf15868",
            "id": "rtb-0d1a55b5ceaf15868",
            "owner_id": "684231376422",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main-private-2"
            },
            "tags_all": {
              "Name": "main-private-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e904202067b9cff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f65a71c903e984f",
            "route_table_id": "rtb-0fbede611965aac31",
            "subnet_id": "subnet-0eb44a6152a439057"
          },
          "dependencies": [
            "aws_route_table.route_table",
            "aws_subnet.first_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0070eed787825f129",
            "route_table_id": "rtb-0fbede611965aac31",
            "subnet_id": "subnet-05703193f40159e07"
          },
          "dependencies": [
            "aws_route_table.route_table",
            "aws_subnet.second_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0028be1edd95778",
            "route_table_id": "rtb-09dbc53ddf8bc5fab",
            "subnet_id": "subnet-033f07a4d85992009"
          },
          "dependencies": [
            "aws_route_table.route_table_private_1",
            "aws_subnet.first_private_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c2ddfe2c78eaa59",
            "route_table_id": "rtb-0d1a55b5ceaf15868",
            "subnet_id": "subnet-0ede216fac7ad6c26"
          },
          "dependencies": [
            "aws_route_table.route_table_private_2",
            "aws_subnet.second_private_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "first_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684231376422:subnet/subnet-033f07a4d85992009",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033f07a4d85992009",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "684231376422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "101subnet-private-1"
            },
            "tags_all": {
              "Name": "101subnet-private-1"
            },
            "vpc_id": "vpc-05e904202067b9cff"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "first_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684231376422:subnet/subnet-0eb44a6152a439057",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb44a6152a439057",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "684231376422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "101subnet-1"
            },
            "tags_all": {
              "Name": "101subnet-1"
            },
            "vpc_id": "vpc-05e904202067b9cff"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "second_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684231376422:subnet/subnet-0ede216fac7ad6c26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ede216fac7ad6c26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "684231376422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "101subnet-private-2"
            },
            "tags_all": {
              "Name": "101subnet-private-2"
            },
            "vpc_id": "vpc-05e904202067b9cff"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "second_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684231376422:subnet/subnet-05703193f40159e07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05703193f40159e07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "684231376422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "101subnet-2"
            },
            "tags_all": {
              "Name": "101subnet-2"
            },
            "vpc_id": "vpc-05e904202067b9cff"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684231376422:vpc/vpc-05e904202067b9cff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02e4443158751f75e",
            "default_route_table_id": "rtb-0f3a6dfd85c887e69",
            "default_security_group_id": "sg-07907c26a03d55665",
            "dhcp_options_id": "dopt-e226fa89",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05e904202067b9cff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f3a6dfd85c887e69",
            "owner_id": "684231376422",
            "tags": {
              "Name": "terraform-101"
            },
            "tags_all": {
              "Name": "terraform-101"
            }
          }
        }
      ]
    }
  ]
}